--- a/src/pages/MyNFT/SellNFT/index.module.scss
+++ b/src/pages/MyNFT/SellNFT/index.module.scss
@@ -1,104 +1,54 @@
-$tablet: 814px;
-$mobile: 600px;
-$mobile-2: 500px;
-$mobile-3: 400px;
 .main-title {
+    text-align: center;
+    text-transform: uppercase;
     color: #fff;
-    font-size: 20px;
+    margin: 40px 0px;
+    font-size: 28px;
     font-weight: 600;
-    line-height: 150%;
+}
+.list {
+    display: flex;
+    // gap: 8px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.footer {
     display: flex;
     align-items: center;
-    position: relative;
+    justify-content: flex-end;
+    gap: 20px;
+    margin-right: 30px;
+    .cart {
+        position: relative;
+        img {
+            width: 48px;
+            height: 42px;
+            
+           
+        }
+        .total {
+            padding: 8px;
+            color: #fff;
+            font-weight: bolder;
+            font-size: 16px;
+            background: #d29bff;
+            border: 2px solid #1b1349;
+            position: absolute;
+            border-radius: 50%;
+            position: absolute;
+            top: -18px;
+            right: -6px;
 
-    svg {
-        position: absolute;
-        line-height: 150%;
+        }
+    }
+
+    button {
+        padding: 8px 12px;
+        color: #fff !important;
         font-weight: 600;
         font-size: 20px;
-        left: -26px;
-        top: 50%;
-        transform: translate(0, -50%);
-        // top: 0;
-        cursor: pointer;
-        &:hover {
-            color: #9254c8;
-        }
-    }
-}
-.table {
-    position: relative;
-
-    &-header {
-        margin-top: 28px;
-        height: 40px;
-        padding: 9px 0px;
-        border-radius: 4px 4px 0px 0px;
-        background: #faf0ff;
-        color: #4200ff;
-        font-size: 14px;
-        line-height: 21px;
-        font-weight: bold;
-        @media (max-width: $mobile-2) {
-            font-size: 13px;
-        }
-    }
-    &-body {
-        // padding: 10px 0px;
-        color: #402a7d;
-        border-radius: 0px 0px 4px 4px;
-        // border: 1px solid #CFA4EA;
-        // background: #EBE3FF;
-        backdrop-filter: blur(50px);
-        position: relative;
-        .spin {
-            width: 100%;
-            padding-top: 20px;
-            text-align: center;
-        }
-        .add-icon {
-            position: absolute;
-            right: -48px;
-            bottom: 4px;
-            cursor: pointer;
-            @media (max-width: $tablet) {
-                right: -40px;
-                width: 30px;
-                height: 30px;
-            }
-            @media (max-width: $mobile-2) {
-                right: -30px;
-                width: 25px;
-                height: 25px;
-            }
-        }
-    }
-    .wrapper-btn {
-        display: flex;
-        justify-content: flex-end;
-        gap: 12px;
-        margin-top: 32px;
-        color: white;
-        &--sell {
-            padding: 5px 24px;
-            width: fit-content;
-            color: rgba(255, 255, 255, 0.5);
-
-            background: rgba(223, 1, 255, 0.2);
-            // background: linear-gradient(90deg, #D35FF0 0%, #9B2EDE 100%);
-            border-radius: 4px;
-            &--active {
-                background: linear-gradient(90deg, #d35ff0 0%, #9b2ede 100%);
-                color: white;
-            }
-        }
-        &--add {
-            padding: 5px 24px;
-            width: fit-content;
-            color: white;
-
-            background: linear-gradient(90deg, #00c6fb 0%, #005bea 100%);
-            border-radius: 4px;
-        }
+        background: linear-gradient(270.94deg, #fb35ff 4.88%, #8d4abc 99.69%);
+        border-radius: 6px;
+        cursor: default !important;
     }
 }
