--- a/src/pages/MyNFT/NFTDetail/index.module.scss
+++ b/src/pages/MyNFT/NFTDetail/index.module.scss
@@ -194,5 +194,12 @@
             width: 60px;
             height: 60px;
         }
+
+        .sell-btn{
+            margin-top: 10px;
+            background: #3C1350;
+            color: #fff;
+            
+        }
     }
 }
