--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -170,11 +170,11 @@
             padding: 12px;
         }
         div:hover{
-            background: red;
+            background: blueviolet;
             
         }
         &--active{
-            background: red;
+            background: blueviolet;
         }
     }
 }
