update marketplace interface (pending)

--- a/src/components/MainLayout/index.module.scss
+++ b/src/components/MainLayout/index.module.scss
@@ -6,7 +6,7 @@ $break-point-3: 767px;
     .body {
         min-height: calc(100vh - 70px);
         height: 100%;
-        background: #1b1349;
+        background: #fdecd9;
 
         .container {
             width: 100vw;
