--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Play&display=swap");
 .filter {
-    background: #402a7d;
+    background: #fdf5e8;
+    font-family: Play;
     backdrop-filter: blur(50px);
-    padding: 60px 25px;
+    padding: 60px 0px;
     min-height: 100%;
     width: 100%;
 
@@ -163,18 +165,24 @@
         line-height: 150%;
         color: #ffffff;
     }
-    .menu{
-        color: #fff;
-        font-size: 24px;
-        div{
+    .filter-icon {
+        width: 15px;
+        margin-right: 10px;
+    }
+    .menu {
+        color: #833f1d;
+        font-size: 16px;
+        div {
             padding: 12px;
         }
-        div:hover{
-            background: blueviolet;
-            
+
+        div:hover {
+            background: #a86c60;
+            color: #ffffff;
         }
-        &--active{
-            background: blueviolet;
+        &--active {
+            background: #a86c60;
+            color: #ffffff;
         }
     }
 }
