--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -1,14 +1,16 @@
 $break-point-1: 912px;
 $break-point-2: 1180px;
+@import url("https://fonts.googleapis.com/css2?family=Play&display=swap");
 
 .navbar {
+    font-family: Play;
     position: relative;
-    background: #3c1350;
+    background: #944850;
     width: 100%;
     height: 70px;
 
     .container {
-        max-width: 96%;
+        max-width: 100%;
         height: 70px;
         margin: auto auto;
         display: flex;
@@ -64,13 +66,17 @@ $break-point-2: 1180px;
         }
     }
     .cn-wallet {
+        height: 100%;
         padding: 10px 18px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         color: #fff;
         font-size: 20px;
         font-weight: 600;
-        background: linear-gradient(180deg, #7000ff 0%, #d785fe 100%);
+        background: #f25858;
         backdrop-filter: blur(4px);
-        border-radius: 6px;
+        // border-radius: 6px;
         cursor: pointer;
     }
 }
